Trying to fix stretched mockup images on mobile devices.

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -131,8 +131,9 @@
 
 .mockup {
     img {
-        object-fit: none;
-        width: 80em;
+        max-width: 90%;
+        max-height: 90%;
+        object-fit: contain;
         margin: 1em auto 0em auto;
     }
 }
@@ -175,11 +176,11 @@
             margin: 0em 0.5em 0.1em 0.5em;
         }
     }
-    .mockup {
-        img {
-            width: 50em;
-        }
-    }
+    // .mockup {
+    //     img {
+    //         width: 50em;
+    //     }
+    // }
     .back-btn {
         padding: 1em 0em 2em 0em;
         a {
@@ -223,11 +224,11 @@
             margin: 0em 0.5em 0.1em 0.5em;
         }
     }
-    .mockup {
-        img {
-            width: 25em;
-        }
-    }
+    // .mockup {
+    //     img {
+    //         width: 25em;
+    //     }
+    // }
     .back-btn {
         padding: 1em 0em 2em 0em;
         a {
